--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "noImplicitReturns": true,
         "strictNullChecks": true,
         "sourceMap": true,
-        "outDir": "./output",
+        "outDir": "./build",
         "module": "commonjs"
     },
     "exclude": [
