--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/hbaqai/typescript-boiler#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "loglevel": "^1.4.1",
     "tslint": "^3.13.0",
     "typescript": "^2.0.0",
     "typings": "^1.3.1"
