--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "typescript-boiler",
+  "name": "1passwordanytime",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "cp -R public build/ && cp -R views build/ && node ./build/bin/www.js",
+    "clean": "rm -rf build/*"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hbaqai/typescript-boiler.git"
+    "url": "git+https://github.com/hbaqai/1PasswordAnytime"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Hashir Baqai",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hbaqai/typescript-boiler/issues"
+    "url": "https://github.com/hbaqai/1PasswordAnytime/issues"
   },
-  "homepage": "https://github.com/hbaqai/typescript-boiler#readme",
+  "homepage": "https://github.com/hbaqai/1PasswordAnytime#readme",
   "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
     "express": "^4.14.0",
+    "jade": "~1.11.0",
     "loglevel": "^1.4.1",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
     "tslint": "^3.13.0",
     "typescript": "^2.0.0",
     "typings": "^1.3.1"
