--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
+    "ejs": "^2.4.2",
     "express": "^4.14.0",
-    "jade": "~1.11.0",
     "loglevel": "^1.4.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
